# async-network-engine

./: .gitignore  .gitmodules  README.md  async-network-engine.sln.DotSettings  package.json  workspace.code-workspace
.github/workflows/: upmsync.yml
Assets/: workspace.code-workspace
Assets/GoModule/: README.md  asyncnetworklib.go  asyncrpc.pb.go  go.mod  go.sum
Assets/Package/: package.json
Assets/Package/Protobuf/: asyncrpc.proto
Assets/Package/Runtime/: AsyncNetworkEngine.cs  Base64StdEncoding.cs  Base64Url.cs
Assets/Package/Runtime/Protobuf/: Asyncrpc.cs
Assets/Package/asyncnetworkengine/: asyncrpc.pb.go
Assets/Proto/: asyncrpc.proto
Assets/Protobuf/: GoogleProtobufConfig.asset  asyncrpc.proto
Assets/ProtobufCompiler/: GoogleProtobufConfig.asset
Assets/Scenes/: TestScene.unity
Assets/Scripts/Version/: GameVersion.cs
Assets/Tests/: TestAsyncNetworkEngine.cs  TestBench.cs  TestScript.cs  Tests.asmdef
Assets/Tests/AWS/Cloud/: cf_serverless.yaml  serverless.yaml
Assets/Tests/AWS/Cloud/Templates/: cloudformation_function.yaml
Assets/Tests/AWS/Lambda/: go.mod  go.sum  main.go
Assets/Tests/AWS/Lambda/asyncnetworkengine/: asyncnetworklib.go  asyncrpc.pb.go
Assets/Tests/GCP/: go.mod  go.sum  main.go
Assets/Tests/GCP/Function/: go.mod  go.sum  main.go
Assets/Tests/Game/: TestAsyncNetworkEngine.cs
Assets/Tests/PlayMode/: PlayModeTests.asmdef
Assets/Tests/TestScenes/: TestScene.unity
Assets/asyncnetworkengine/: asyncnetworklib.go  asyncrpc.pb.go  go.mod
CppSDK/: CMakeLists.txt  README.md
CppSDK/include/asyncnetworkengine/: asyncnetworkengine.hpp
CppSDK/src/ase/: asyncnetworkengine.cpp  asyncnetworkengine.hpp  asyncrpc.pb.cc  asyncrpc.pb.h
CppSDK/src/asyncnetworkengine/: asyncnetworkengine.cpp
CppSDK/tests/: asetests.cpp
ProjectSettings/: EditorBuildSettings.asset
Runtime/: AsyncNetworkEngine.cs
Runtime/Protobuf/: Asyncrpc.cs
UnitySDK/Assets/GoModule/: README.md  asyncrpc.pb.go  go.mod  go.sum  sessionlib.go  sessionlib_test.go
UnitySDK/Assets/Package/: README.md  package.json
UnitySDK/Assets/Package/Runtime/: AsyncNetworkEngine.cs  GameWorkstore.AsyncNetworkEngine.asmdef
UnitySDK/Assets/Package/Runtime/Protobuf/: Asyncrpc.cs
UnitySDK/Assets/Proto/: ProtobufConfig.asset
UnitySDK/Assets/Scenes/: Main.unity
UnitySDK/Assets/Scripts/Version/: GameVersion.cs
UnitySDK/Assets/Tests/: BuildScript.asset
UnitySDK/Assets/Tests/AWS/Cloud/: cf_builds.yaml
UnitySDK/Assets/Tests/AWS/Lambda/: main.go
UnitySDK/Assets/Tests/EditorMode/: EditorMode.asmdef  EditorModeTest.cs
UnitySDK/Assets/Tests/GCP/: main.go
UnitySDK/Assets/Tests/Game/: TestAsyncNetworkEngine.cs
UnitySDK/Assets/Tests/PlayMode/: PlayModeTests.asmdef  PlayModeTests.cs
UnitySDK/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnrealSDK/: UnrealSDK.sln  UnrealSDK.uproject
UnrealSDK/Config/: DefaultEngine.ini  DefaultGame.ini
UnrealSDK/Plugins/AsyncNetworkEngine/: .gitignore  AsyncNetworkEngine.uplugin
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/: AsyncNetworkEngine.Build.cs
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/CppSDK/: CMakeLists.txt  CMakeSettings.json  README.md
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/CppSDK/src/ase/: asyncnetworkengine.cpp  asyncnetworkengine.h  asyncnetworkengine.hpp  asyncrpc.pb.cc  asyncrpc.pb.h  base64.cpp  base64.h
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/CppSDK/tests/: asetests.cpp
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/Private/: AsyncNetworkEngine.cpp  AsyncNetworkEngineModule.cpp
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/Public/: AsyncNetworkEngine.h  AsyncNetworkEngineModule.h  AsyncNetworkEngineTest.h
UnrealSDK/Plugins/AsyncNetworkEngine/Source/AsyncNetworkEngine/UnrealSDK/: AsyncNetworkEngine.h  AsyncNetworkEngineTest.h  AsyncNetworkEngine_Test.cpp
UnrealSDK/Plugins/GoogleProtobuf/: GoogleProtobuf.uplugin
UnrealSDK/Plugins/GoogleProtobuf/Source/GoogleProtobuf/: GoogleProtobuf.Build.cs
UnrealSDK/Plugins/GoogleProtobuf/Source/GoogleProtobuf/Private/: GoogleProtobuf.cpp
UnrealSDK/Plugins/Protobuf/Source/Protobuf/: Protobuf.Build.cs
UnrealSDK/Source/: UnrealSDK.Target.cs  UnrealSDKEditor.Target.cs
UnrealSDK/Source/UnrealSDK/: AsyncNetworkEngineGameMode.cpp  AsyncNetworkEngineGameMode.h  AsyncNetworkEngine_Test.cpp  UnrealSDK.Build.cs  UnrealSDK.cpp  UnrealSDKGameModeBase.cpp  UnrealSDKGameModeBase.h
UnrealSDK/Source/UnrealSDK/Proto/: asyncrpc.pb.cc  asyncrpc.pb.h
(+8 files in other folders)
